sumo/tests/jtrrouter/errors/network/edge/cedge/root__edge__cedge#id__empty1/errors.jtrrouter
Error: At edge '1': succeeding edge '' does not exist.
Quitting (on error).
